force-app/main/default/objects/Translated_Record__c/Translated_Record__c.object-meta.xml
<CustomObject>
    <description>Translated details of different other object records like Account Name from account record</description>
    <label>Translated Record</label>
    <nameField>
        <displayFormat>TR-{00000}</displayFormat>
        <label>Translated Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Translated Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>