force-app/main/default/objects/Translated_Record__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Translated  Account</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Translated Records</relationshipLabel>
    <relationshipName>Translated_Records</relationshipName>
    <type>Lookup</type>
</CustomField>