force-app/main/default/objects/Translated_Record__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Translated Translated</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Translated Records</relationshipLabel>
    <relationshipName>Translated_Records</relationshipName>
    <type>Lookup</type>
</CustomField>