force-app/main/default/objects/Translated_Record__c/fields/Translated_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Translated_Account_Name__c</fullName>
    <description>Translated Account Name</description>
    <label>Translated Account Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>