force-app/main/default/objects/Translated_Record__c/fields/Translated_Billing_Address_Line_1__c.field-meta.xml
<CustomField>
    <fullName>Translated_Billing_Address_Line_1__c</fullName>
    <description>Translated Billing Address Line 1</description>
    <label>Translated Billing Address Line 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>