force-app/main/default/objects/Translated_Record__c/fields/Translated_Billing_Address_Line_3__c.field-meta.xml
<CustomField>
    <fullName>Translated_Billing_Address_Line_3__c</fullName>
    <description>Translated Billing Address Line 3 (Optional)</description>
    <label>Translated Billing Address Line 3</label>
    <type>TextArea</type>
</CustomField>