force-app/main/default/objects/Translated_Record__c/fields/Translated_Billing_City__c.field-meta.xml
<CustomField>
    <fullName>Translated_Billing_City__c</fullName>
    <description>Translated Billing City</description>
    <label>Translated Billing City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>