force-app/main/default/objects/Translated_Record__c/fields/Translated_Billing_Country__c.field-meta.xml
<CustomField>
    <fullName>Translated_Billing_Country__c</fullName>
    <description>Translated Billing Country</description>
    <label>Translated Billing Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>