force-app/main/default/objects/Translated_Record__c/fields/Translated_Billing_State__c.field-meta.xml
<CustomField>
    <fullName>Translated_Billing_State__c</fullName>
    <description>Translated Billing State/Province</description>
    <label>Translated Billing State/Province</label>
    <length>255</length>
    <type>Text</type>
</CustomField>