force-app/main/default/objects/Translated_Record__c/fields/Translated_Contact_FirstName__c.field-meta.xml
<CustomField>
    <fullName>Translated_Contact_FirstName__c</fullName>
    <description>Translated Contact FirstName</description>
    <label>Translated Contact FirstName</label>
    <length>100</length>
    <type>Text</type>
</CustomField>