force-app/main/default/objects/Translated_Record__c/fields/Translated_Contact_LastName__c.field-meta.xml
<CustomField>
    <fullName>Translated_Contact_LastName__c</fullName>
    <description>Translated Contact LastName</description>
    <label>Translated Contact LastName</label>
    <length>100</length>
    <type>Text</type>
</CustomField>