force-app/main/default/objects/Translated_Record__c/fields/Translated_Contact_Salutation__c.field-meta.xml
<CustomField>
    <fullName>Translated_Contact_Salutation__c</fullName>
    <label>Translated Contact Salutation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>