force-app/main/default/objects/Translated_Record__c/fields/Translated_ContactTitle__c.field-meta.xml
<CustomField>
    <fullName>Translated_ContactTitle__c</fullName>
    <description>Translated Contact Title</description>
    <label>Translated Contact Title</label>
    <length>100</length>
    <type>Text</type>
</CustomField>