force-app/main/default/objects/Translated_Record__c/fields/Translated_EmailAddress__c.field-meta.xml
<CustomField>
    <fullName>Translated_EmailAddress__c</fullName>
    <description>Translated EmailAddress</description>
    <label>Translated EmailAddress</label>
    <length>100</length>
    <type>Text</type>
</CustomField>