force-app/main/default/objects/Translated_Record__c/fields/Translated_Language__c.field-meta.xml
<CustomField>
    <fullName>Translated_Language__c</fullName>
    <description>Translated Language</description>
    <label>Translated Language</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Language</valueSetName>
    </valueSet>
</CustomField>