force-app/main/default/objects/Translated_Record__c/fields/Translation_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Translation_Postal_Code__c</fullName>
    <description>Translated Billing Zip/Postal Code</description>
    <label>Translated Billing Zip/Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>